<resources>
    <string name="app_name">My Translate</string>
    <string name="connection">Соединение..</string>
    <string name="connection_message">Пожалуйста, подождите.</string>
    <string name="error">Произошла ошибка!</string>
    <string name="input_word_hint">Введите слово для перевода.</string>
    <string name="input_lang_hint">Выберете язык.</string>
    <string name="add_word_title">Добавление слова</string>
    <string name="russian">Русский</string>
    <string name="english">Английский</string>
    <string name="german">Немецкий</string>
    <string name="russian_lang">ru</string>
    <string name="english_lang">en</string>
    <string name="german_lang">de</string>
    <string name="yandex_text">Переведено сервисом «Яндекс.Переводчик»\n https://translate.yandex.ru/</string>
    <string name="translate_title">Перевод:</string>
    <string name="search">Поиск</string>
    <string name="attention">Внимание!</string>
    <string name="remove_question">Удалить слово?</string>
    <string name="exist_word_message">Слово \"%1$s\" уже есть в словаре.</string>
</resources>
